# cute-hmm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
latex/: main.tex
scripts/: build_docker.sh  preprocess_datasets.py
sf-compute/: nanogpt.yaml  startup.sh
src/cute_hmm/: __init__.py  args.py  train.py  train_fineweb.py  train_gpt.py  utils.py
